Bug 159032 - crash with smart justify
Summary: crash with smart justify
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.2 target:...
Keywords: bibisected, regression
Depends on:
Blocks: DOCX-compatibilityMode-15 DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-01-04 23:52 UTC by László Németh
Modified: 2025-04-13 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-01-04 23:52:02 UTC
Description:
From Caolán McNamara's bug report from https://gerrit.libreoffice.org/c/core/+/160988/comments/721d6430_e5d6277e:

"We've got a new crashtesting assert I bisected to here, to reproduce:

wget https://bugs.documentfoundation.org/attachment.cgi?id=157047 -O ~/Downloads/tdf124795-5.docx
./instdir/program/soffice --headless --convert-to pdf ~/Downloads/tdf124795-5.docx"


Steps to Reproduce:
1. Follow the description.

Actual Results:
crash (also with opening the file)

Expected Results:
no crash


Reproducible: Always


User Profile Reset: No

Additional Info:
Regression from commit 36bfc86e27fa03ee16f87819549ab126c5a68cac.
Comment 1 Commit Notification 2024-01-05 05:08:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/96b3ed389fa5d434ed738d7f84dada4b6e2fabec

tdf#159032 sw smart justify: fix crash with complex tables

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-01-05 14:50:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9e201cbdc31caca694e067ee0f66cce2b07c9778

tdf#159032 sw smart justify: fix crash with complex tables

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-09-11 15:16:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f44c334a3e2eb8f0fb57df6805c12fc1c128ea99

tdf#159032: minimize sample file

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-13 11:01:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/f3fa55195dcc51f4bb83f9d500c426d1dd976813

tdf#159032: minimize sample file

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.